AFinalDevops-January-2023-main/kubernetes/Ingress/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ingress-app-deployment
spec:
  replicas: 4
  selector:
    matchLabels:
      app: ingress-app
  template:
    metadata:
      labels:
        app: ingress-app
    spec:
      containers:
      - name: ingressapp
        image: harshajain/ip-app:1
        ports:
        - containerPort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: ingress-app-cluster-ip
spec:
  selector:
    app: ingress-app
  ports:
  - name: http
    port: 30002
    targetPort: 80
